# c64keyboard_emulator

./: .gitignore  MANIFEST.in  readme.md  requirements.txt  setup.cfg  setup.py
c64keyboard/: connection.py  keyboard.py  keyboard_logic.py
config/: key_config.json  keyboard_matrix.json  keyboard_matrix_sv.json
config/keyboard_layout/: breadbin.json  breadbin_sv.json  c64c.json
images/: c64-layout.xcf
tools/: generate_layouts.py  layout_key_pos.json  layout_key_pos_sv.json  requirements_tools.txt
