[metadata]
name = c64keyboard_emulator
version = 1.0.0
author = Henrik
description = Emulator for C64 keyboard
license = MIT

[options]
packages = find:
install_requires =
    numpy>=1.19.0
    pyserial>=3.5

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    c64keyboard_emulator = c64keyboard_emulator.main:main